// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Notification 1`] = `
<div
  id="default"
/>
`;

exports[`Mock render - default - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - default - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - default - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - default - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - default - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.bottom: 250 placement: bottomLeft - value[0] - Notification 1`] = `
<div
  id="properties.bottom: 250 placement: bottomLeft"
/>
`;

exports[`Mock render - properties.bottom: 250 placement: bottomLeft - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.bottom: 250 placement: bottomLeft - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.bottom: 250 placement: bottomLeft - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.bottom: 250 placement: bottomLeft - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.bottom: 250 placement: bottomLeft - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.button: icon - value[0] - Notification 1`] = `
<div
  id="properties.button: icon"
/>
`;

exports[`Mock render - properties.button: icon - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.button: icon - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.button: icon - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.button: icon - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.button: icon - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.closeIcon: AiOutlineAlert - value[0] - Notification 1`] = `
<div
  id="properties.closeIcon: AiOutlineAlert"
/>
`;

exports[`Mock render - properties.closeIcon: AiOutlineAlert - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.closeIcon: AiOutlineAlert - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.closeIcon: AiOutlineAlert - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.closeIcon: AiOutlineAlert - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.closeIcon: AiOutlineAlert - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.description: - value[0] - Notification 1`] = `
<div
  id="properties.description:"
/>
`;

exports[`Mock render - properties.description: - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.description: - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.description: - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.description: - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.description: - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.duration: 6 - value[0] - Notification 1`] = `
<div
  id="properties.duration: 6"
/>
`;

exports[`Mock render - properties.duration: 6 - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.duration: 6 - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.duration: 6 - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.duration: 6 - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.duration: 6 - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Notification 1`] = `
<div
  id="properties.icon"
/>
`;

exports[`Mock render - properties.icon - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.message - value[0] - Notification 1`] = `
<div
  id="properties.message"
/>
`;

exports[`Mock render - properties.message - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.message - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.message - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.message - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.message - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.placement: bottomLeft - value[0] - Notification 1`] = `
<div
  id="properties.placement: bottomLeft"
/>
`;

exports[`Mock render - properties.placement: bottomLeft - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.placement: bottomLeft - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.placement: bottomLeft - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.placement: bottomLeft - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.placement: bottomLeft - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.placement: bottomRight - value[0] - Notification 1`] = `
<div
  id="properties.placement: bottomRight"
/>
`;

exports[`Mock render - properties.placement: bottomRight - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.placement: bottomRight - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.placement: bottomRight - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.placement: bottomRight - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.placement: bottomRight - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.placement: topLeft - value[0] - Notification 1`] = `
<div
  id="properties.placement: topLeft"
/>
`;

exports[`Mock render - properties.placement: topLeft - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.placement: topLeft - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.placement: topLeft - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.placement: topLeft - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.placement: topLeft - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Notification 1`] = `
<div
  id="properties.status: error"
/>
`;

exports[`Mock render - properties.status: error - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Notification 1`] = `
<div
  id="properties.status: info"
/>
`;

exports[`Mock render - properties.status: info - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Notification 1`] = `
<div
  id="properties.status: warning"
/>
`;

exports[`Mock render - properties.status: warning - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - properties.top: 250 placement: topLeft - value[0] - Notification 1`] = `
<div
  id="properties.top: 250 placement: topLeft"
/>
`;

exports[`Mock render - properties.top: 250 placement: topLeft - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - properties.top: 250 placement: topLeft - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - properties.top: 250 placement: topLeft - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - properties.top: 250 placement: topLeft - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - properties.top: 250 placement: topLeft - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - with description uses html - value[0] - Notification 1`] = `
<div
  id="with description uses html"
/>
`;

exports[`Mock render - with description uses html - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - with description uses html - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - with description uses html - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - with description uses html - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - with description uses html - value[0] - Notification 6`] = `Array []`;

exports[`Mock render - with message uses html - value[0] - Notification 1`] = `
<div
  id="with message uses html"
/>
`;

exports[`Mock render - with message uses html - value[0] - Notification 2`] = `Array []`;

exports[`Mock render - with message uses html - value[0] - Notification 3`] = `Array []`;

exports[`Mock render - with message uses html - value[0] - Notification 4`] = `Array []`;

exports[`Mock render - with message uses html - value[0] - Notification 5`] = `Array []`;

exports[`Mock render - with message uses html - value[0] - Notification 6`] = `Array []`;
